# Mist

./: .gitignore  CMakeLists.txt
cmake/: MistConfig.cmake.in  MistCopts.cmake  MistEnum.cmake  MistHelpers.cmake  MistLinker.cmake  MistProto.cmake
include/mist/base/: error.h  grade.enum  hello_world.h  macro.h  registry.h
include/mist/proto/: search_request.proto
src/base/: CMakeLists.txt  hello_world.cc
test/base/: CMakeLists.txt  grade_test.cc  hello_world_test.cc  registry_dummy_base.cc  registry_dummy_base.h  registry_test.cc
tools/codegen/: enum_generator.py
